css/index.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root {
	--black      : #000;
	--white      : #FFF;

	--blue       : #0065FC;
	--light-blue : #DEEBFF;

	--grey       : #7F7F7F;
	--light-grey : #C8C8C8;
	--bg-grey    : #F2F2F2;

	--radius     : 1.5rem;
}

@media (max-width : 320px) {
	html {
		font-size : 3vw !important;
	}
}

* {
	box-sizing  : border-box;
	font-family : Raleway, sans-serif;
	font-weight : normal;
	margin      : 0;
	padding     : 0;
}

html {
	font-size : 62.5%;
}
body {
	margin           : 0;
	padding          : 0;
	background-color : var(--white);
	color            : var(--black);
	font-size        : 2rem;
}

h1, h2, h3, h4, h5, h6 {
	font-weight : bold;
	margin      : 0 0 2rem 0;
	padding     : 0;
}
h1, h2 {
	font-size : 2rem;
}
h3, h4 {
	font-size : 1.8rem;
}

small {
	font-size : 1.5rem;
}

.text-grey {
	color : var(--grey);
}
.text-blue {
	color : var(--blue);
}
.text-white {
	color : var(--white);
}

.bold {
	font-weight : bold;
}

.flex-vertical {
	display        : flex;
	flex-direction : column;
}

.flex-horizontal {
	display        : flex;
	flex-direction : row;
}
.flex-horizontal.reverse {
	flex-direction : row-reverse;
}

.wrap {
	flex-wrap : wrap;
}

.justify-center {
	justify-content : center;
}
.justify-end {
	justify-content : flex-end;
}
.justify-space-between {
	justify-content : space-between;
}

.align-start {
	align-items : flex-start;
}
.align-end {
	align-items : flex-end;
}
.align-center {
	align-items : center;
}
.align-baseline {
	align-items : baseline;
}

.align-self-end {
	align-self : flex-end;
}

a {
	text-decoration : none;
	color           : var(--black);
}

#header {
	display    : flex;
	flex-flow  : column nowrap;
	margin-top : 3rem;
}

/* NAV-BAR */
.nav-bar {
	padding : 3rem 1rem 1rem 1rem;
	max-width : 1200px;
	margin    : 0 auto;
}
.nav-bar-container {
	display         : flex;
	flex-flow       : row wrap;
	flex-grow       : 1;
	justify-content : space-between;
}
.nav-bar-brand {
	padding   : 0 .5rem;
	flex-grow : 1;
}
.nav-bar-brand > img {
	height : 6rem;
}
.nav-bar-link {
	color      : var(--blue);
	padding    : 1rem 1.5rem;
	align-self : center;
}
.nav-bar-group {
	margin          : 1rem -1rem 0;
	display         : flex;
	flex-flow       : row nowrap;
	justify-content : center;
	flex-grow       : 1;
	width           : 100%;
}
.nav-bar-link.anchor {
	width         : 50%;
	text-align    : center;
	margin        : 0;
	padding       : 1.5rem;
	border-bottom : 3px solid var(--bg-grey);
	color         : var(--black);
}
.nav-bar-link.anchor.active {
	color        : var(--blue);
	border-color : var(--blue);
}
.nav-bar-link.anchor:hover {
	color : var(--blue);
}

body > main {
	padding   : 0 3rem;
	max-width : 1200px;
	margin    : 0 auto;
}

/* SEARCH FORM */
#search-form {
	margin    : 3rem 0;
	display   : flex;
	flex-flow : row nowrap;
}
#search-form > label {
	background-color : var(--bg-grey);
	padding          : 1rem 2rem;
	border-radius    : var(--radius) 0 0 var(--radius);
}
#search-form > input[type='text'] {
	border-color : var(--bg-grey);
	border-style : solid;
	border-width : 2px 0;
	padding      : 1.2rem 1.5rem;
	font-weight  : bold;
	outline      : none;
	font-size    : 1.8rem;
	max-width    : 250px;

	width        : calc(100% - 4rem - 4rem);
}
#search-form > button[type='submit'] {
	background-color : var(--blue);
	color            : var(--white);
	border           : none;
	margin-left      : -1rem;
	padding          : 1rem 1.7rem;
	border-radius    : var(--radius);
	font-weight      : bold;
	font-size        : 1.5rem;
	cursor           : pointer;
}

/* FILTERS SECTION */
#filters-section {
	display   : flex;
	flex-flow : column nowrap;
}
.filters-container {
	justify-content : flex-start;
	margin-bottom   : 3rem;
}
.filter {
	display          : inline-flex;
	flex-flow        : row nowrap;
	border           : 2px solid var(--light-grey);
	background-color : var(--white);
	border-radius    : calc(var(--radius) * 2);
	flex-shrink      : 1;
	padding          : 0 2rem 0 0;
	margin           : 0 1rem 1rem 0;
}
.filter-icon {
	--size           : 5rem;
	background-color : var(--light-blue);
	border-radius    : calc(var(--radius) * 2);
	width            : var(--size);
	height           : var(--size);
	margin           : -2px 1rem -2px -2px;
	padding          : 1.3rem;
	font-size        : 2rem;
	color            : var(--blue);
}
.filter-text {
	font-size   : 1.5rem;
	align-self  : center;
	font-weight : bold;
	text-align  : left;
	white-space : nowrap;
}

.search-info {
	display         : flex;
	flex-flow       : row nowrap;
	justify-content : flex-start;
	align-items     : flex-start;
	margin-bottom   : 3rem;
}
.search-info > .fa-info {
	color            : var(--blue);
	background-color : var(--white);
	border           : .2rem solid var(--bg-grey);
	border-radius    : calc(var(--radius) * 2);
	font-size        : 1.2rem;
	padding          : .5rem .9rem;
	margin-right     : 1rem;
	text-align       : center;
}
.search-info > p {
	font-size   : 1.4rem;
	padding-top : .5rem;
}

/* POPULAR LODGING SECTION */
#popular-lodging {
	display          : flex;
	flex-flow        : column nowrap;
	background-color : var(--bg-grey);
	padding          : 3rem 2rem;
	margin           : 0 -3rem;
}
#popular-lodging > :first-child {
	display         : flex;
	flex-flow       : row nowrap;
	justify-content : space-between;
	align-items     : baseline;
}
#popular-lodging > :last-child {
	display   : flex;
	flex-flow : column nowrap;
}

.card {
	background-color : var(--white);
	border-radius    : calc(var(--radius) * 1.5);
	box-shadow       : 0 0 10px rgba(0, 0, 0, .15);
	transition       : box-shadow .25s;
	padding          : .5rem;
	display          : flex;
	flex-flow        : column nowrap;
}
.card-thumbnail {
	width           : 100%;
	height          : 30vw;
	border-radius   : calc(var(--radius) * 1.2) calc(var(--radius) * 1.2) 0 0;
	object-fit      : cover;
	object-position : center center;
}

.card.card-horizontal {
	flex-flow : row nowrap;
}
.card.card-horizontal > .card-thumbnail {
	width         : 40%;
	border-radius : calc(var(--radius) * 1.2) 0 0 calc(var(--radius) * 1.2);
	margin-right  : 1rem;
}

.card-link {
	display       : flex;
	flex-flow     : column nowrap;
	margin-bottom : 2rem;
}
.card-link:hover > .card {
	box-shadow : 0 0 10px rgba(0, 0, 0, .3);
}

.card.card-full {
	padding : 0 0 .5rem 0;
}
.card.card-full > .card-thumbnail {
	object-position : center center;
}

.card-title {
	font-size     : 1.4rem;
	font-weight   : bold;
	margin-bottom : .5rem;
}
.card-container {
	display         : flex;
	flex-flow       : column nowrap;
	justify-content : flex-start;
	padding         : 1rem;
}
.rating {
	display         : flex;
	flex-flow       : row nowrap;
	flex-grow       : 1;
	justify-content : flex-start;
	align-items     : flex-end;
	font-size       : 1.2rem;
	margin-top      : 1rem;
}
.fa-star {
	color        : var(--bg-grey);
	margin-right : .1rem;
}
.fa-star.full {
	color : var(--blue);
}

.read-more-link {
	font-size   : 2rem;
	font-weight : bold;
	margin      : 1rem 0;
}

/* LODGING SECTION */
#hebergements, #activites {
	display   : flex;
	flex-flow : column nowrap;
	padding   : 3rem 2rem;
	margin    : 0 -3rem 2rem -3rem;
}
#hebergements > :first-child {
	display   : flex;
	flex-flow : row nowrap;
}
#hebergements > :last-child {
	display         : flex;
	flex-flow       : column nowrap;
	justify-content : flex-start;
	align-items     : stretch;
}

/* ACTIVITIES SECTION */
#activites {
	margin-bottom : 3rem;
}
#activites .card-title {
	margin-top : 1rem;
}

#cards-grid {
	display   : flex;
	flex-flow : column nowrap;
}
#cards-grid > .card-link > .card.card-full {
	flex-grow  : 1;
	max-height : 100%;
}

@media (min-width : 481px) {
	#cards-grid {
		display               : grid;
		grid-template-columns : repeat(2, 1fr);
		grid-template-rows    : repeat(20, 1fr);
		grid-gap              : 3rem;
		max-height            : 900px;
	}

	#cards-grid > .card-link:nth-child(1) {
		grid-row : 1 / 11;
	}
	#cards-grid > .card-link:nth-child(2) {
		grid-row : 1 / 7;
	}
	#cards-grid > .card-link:nth-child(3) {
		grid-row : 7 / 11;
	}
	#cards-grid > .card-link:nth-child(4) {
		grid-row : 11 / 21;
	}
	#cards-grid > .card-link:nth-child(5) {
		grid-row : 11 / 17;
	}
	#cards-grid > .card-link:nth-child(6) {
		grid-row : 17 / 21;
	}

	#cards-grid > .card-link {
		margin          : 0;
		flex-direction  : column;
		justify-content : stretch;
	}
	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
		flex-grow       : 1;
		max-height      : calc(100% - 5.5rem);
		object-fit      : cover;
		object-position : center center;
	}
}
@media (min-width : 1025px) {
	#cards-grid {
		grid-template-columns : repeat(4, 1fr);
		grid-template-rows    : repeat(10, 1fr);
		max-height            : 450px;
	}

	#cards-grid > .card-link:nth-child(3n+1) {
		grid-row : 1 / 11;
	}
	#cards-grid > .card-link:nth-child(2) {
		grid-row : 1 / 7;
	}
	#cards-grid > .card-link:nth-child(3) {
		grid-row : 7 / 11;
	}

	#cards-grid > .card-link:nth-child(5) {
		grid-row : 1 / 6;
	}
	#cards-grid > .card-link:nth-child(6) {
		grid-row : 6 / 11;
	}

	#cards-grid > .card-link {
		margin          : 0;
		flex-direction  : column;
		justify-content : stretch;
	}
	#cards-grid > .card-link > .card.card-full > .card-thumbnail {
		flex-grow       : 1;
		max-height      : calc(100% - 5.5rem);
		object-fit      : cover;
		object-position : center center;
	}
}

/* FOOTER */
#footer {
	background-color : var(--bg-grey);
	margin           : 0 -3rem;
	padding          : 5rem 3rem;
	display          : flex;
	flex-flow        : column nowrap;
}
.footer-col {
	margin-bottom : 3rem;
}
.footer-col-links > * {
	display : block;
	margin  : .5rem 0;
}
.footer-col:last-child {
	margin-bottom : 0;
}

